# minimal-cranelift

./: Cargo.toml  README.md
src/: main.rs
