[package]
name = "lift"
version = "0.1.0"
authors = ["hatoo <hato2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift-codegen = "0.62.0"
cranelift-object = "0.62.0"
cranelift-module = "0.62.0"
cranelift-native = "0.62.0"
cranelift = "0.62.0"
anyhow = "1"
